[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drm"
version = "0.1.0"
description = "DRM (Domain Reduction Method) data reader and visualization toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patricio Palacios B."}
]
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "matplotlib",
    "scipy",
    "numba",
]

[project.urls]
Homepage = "https://github.com/ppalacios92/DRM_DATA"
Repository = "https://github.com/ppalacios92/DRM_DATA"

[tool.setuptools.packages.find]
where = ["src"]