[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ShakerMakerResults"
version = "1.0"
description = "ShakerMaker results reader and visualization toolkit"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Patricio Palacios B."}
]
requires-python = ">=3.8"
dependencies = [
    "h5py",
    "matplotlib",
    "scipy",
    "numba",
]

[project.optional-dependencies]
viewer = [
    "pyvista",
    "vtk",
    "pyvistaqt",
    "qtpy",
]

[project.urls]
Homepage = "https://github.com/ppalacios92/ShakerMakerResults"
Repository = "https://github.com/ppalacios92/ShakerMakerResults"

[tool.setuptools.packages.find]
where = ["src"]
